# lit-gpt

./: README.md  pyproject.toml
.github/workflows/: automatic-code-style-fix.yml  automatic-code-style-fixes.yml  cpu-tests.yml
chat/: base.py
lit_gpt/: utils.py
litgpt/: tokenizer.py
litgpt/scripts/: download.py
pretrain/: tinyllama.py
